# evm-backer

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  evm-backer-spec.md  proposal-vlei-erc-fix.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: Ed25519.sol  Ed25519Verifier.sol  IKERIBacker.sol  IKERIVerifier.sol  KERIBacker.sol  SP1KERIVerifier.sol  SP1TELVerifier.sol  Sha512.sol
contracts/test/: KERIBacker.t.sol  SP1TELVerifier.t.sol  sign_ed25519.py
docs/: 01-gleif-lei.md  02-vlei-overview.md  03-vlei-technical-stack.md  04-vlei-ecosystem.md  05-keri-backers.md  06-design-challenges.md  07-integrity-rules.md  08-sp1-blake3-precompile-spec.md
sp1-guest/: Cargo.toml
sp1-guest/src/: lib.rs  main.rs
sp1-prover/: Cargo.toml  build.rs
sp1-prover/src/: main.rs
sp1-tel-guest/: Cargo.toml
sp1-tel-guest/src/: lib.rs  main.rs
sp1-tel-prover/: Cargo.toml  build.rs
sp1-tel-prover/src/: main.rs
src/evm_backer/: __init__.py  backer.py  cli.py  crawler.py  event_queue.py  http_server.py  proofs.py  rpc.py  service.py  transactions.py
tests/: conftest.py  test_backer_inception.py  test_contract.py  test_crawler.py  test_event_queue.py  test_event_validation.py  test_integration.py  test_receipt.py  test_rpc.py  test_service.py  test_tel.py  test_transactions.py  test_zk.py  test_zk_real.py
