[package]
name = "sp1-tel-guest"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sp1_tel_guest"
path = "src/lib.rs"

[[bin]]
name = "sp1-tel-guest-bin"
path = "src/main.rs"

[dependencies]
sp1-zkvm = { version = "6.0.0" }
blake3 = { version = "1", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
tiny-keccak = { version = "2", features = ["keccak"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
