[package]
name = "sp1-tel-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sp1-tel-prover"
path = "src/main.rs"

[dependencies]
sp1-sdk = { version = "6.0.0", features = ["blocking", "native-gnark"] }
sp1-tel-guest = { path = "../sp1-tel-guest" }
hex = "0.4"
serde_json = "1"

[build-dependencies]
sp1-build = { version = "6.0.0" }
